--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <span>!</span>
     </div>
     <div class="description">
-        <span>Ya no estés triste 💖😊</span>
+        <span> te quiero  💖😊</span>
     </div>
     <div class="button">
         <button class="botones">
