--- a/index.html
+++ b/index.html
@@ -28,9 +28,7 @@
     </div>
 
     <!-- Créditos -->
-    <div class="credits">
-        <p>&copy; 2023 Aprende Con JS.</p>
-    </div>
+    <div class="credits"></div>
 </body>
 
 </html>
